Fixed Spacing and Added Metadata

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,7 +7,6 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    z-index: 1;
 }
 
 #footer-top {
@@ -50,7 +49,7 @@
 }
 
 .right-text {
-    margin-left: 3vw;
+    margin-left: 6vw;
 }
 
 @media screen and (max-width: 700px) {
